--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "morgan": "~1.7.0",
     "mysql": "^2.14.1",
     "node-uuid": "^1.4.8",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "serve-favicon": "~2.3.2"
   }
 }
