--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "mysql": "^2.14.1",
     "node-recaptcha2": "^2.1.2",
     "node-uuid": "^1.4.8",
+    "nodemailer": "^4.1.0",
+    "nodemailer-ses-transport": "^1.5.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "serve-favicon": "~2.3.2"
